main.css
/* ... */
.rounded-button:hover::before {
    opacity: 1;
}



/*------------------------------------*\
  #HEADER
\*------------------------------------*/

header {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 200;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2ss ease-in-out;
    transition: all 0.2s ease-in-out;
}

.navbar {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    flex-wrap: wrap;
    padding: 0 2vw;
    margin: 18px 0;
}

.navbar__element {
    margin: 0 2.5vw;
    text-decoration: none;
    color: #fff;
    cursor: pointer;
    font-size: 1.2rem;
    position: relative;
}

.navbar__element:after {
    content: "";
    position: absolute;
    bottom: -5px;
    width: 0px;
    height: 2px;
    /* margin: 5px 0 0; */
    transition: all 0.2s ease-in-out;
    transition-duration: 0.31s;
    opacity: 0;
    left: 0;
    background-color: #d34eb4;
}

.navbar__element:hover {
    font-weight: bold;
}

.navbar__element:hover:after {
    width: 100%;
    opacity: 1;
}

.mobile-menu {
    position: fixed;
    bottom: 0;
    height: 6%;
    width: 100%;
    z-index: 200;
}

.mobile-menu__icon {
    background-image: url(./assets/menu.svg);

    background-size: contain;
    background-position-x: center;
    background-repeat: no-repeat;
    width: 30px;
    height: 30px;
}

.mobile-menu__icon--opened {
    background-image: url(./assets/close.svg);
}

.mobile-menu-wrapper {
    display: none;
}

@media screen and (max-width: 420px) {
   header {
       visibility: hidden;
       opacity: 0;
       height: 95%;
   }

   nav {
       height: 100%;
   }

   .navbar {
       flex-direction: column;
       height: 100%;
       justify-content: space-evenly;
   }

   .menu-revealed {
       visibility: visible;
       opacity: 1;
   }

   .navbar__element {
       font-size: 1.6rem;
   }

   .mobile-menu-wrapper{
       display: block;
   }
}

/*------------------------------------*\
  #HERO
\*------------------------------------*/

.hero {
    height: 90vh;
    margin-top: 60px;
    color: #fff;
    margin-bottom: 0;
    padding-top: 0;
}

.hero__img {
    max-width: 100%;
    max-height: 80vh;
    margin: auto;
    display: block;
    padding: 20px;
    border-radius: 36px;
}

.hero__text {
    margin: 4% 0 4%;
    position: relative;
    left: -5px;
}

.hero__text > h3 {
    padding-bottom: 8%;
    padding-top: 1%;
}

.hero__text a {
    font-weight: 600;
}

.hero__social {
    display: flex;
    align-items: center;
}

.social-list {
    display: flex;
    margin-bottom: 1rem;
    margin-left: 1rem;
}

.social-icon svg {
    width: 50px;
    height: 50px;
    fill: #151e5cf2;
    padding: 0 4px;
}

.social-icon svg:hover {
    fill: #090e2c;
}

@media screen and (max-width: 746px) {
    .hero {
        flex-direction: column-reverse;
        height: 100%;
    }

    .flex-half {
        width: 100%;
    }

    .hero__block {
        padding: 0 2rem;
    }
}

@media screen and (max-width: 420px) {
    .hero {
        padding-top: 14px;
        margin-top: 0;
    }
}

/*------------------------------------*\
  #PORTFOLIO
\*------------------------------------*/

.portfolio {
    background-color: #fff;
    color: #000000;
    margin-bottom: 5rem;
}

.portfolio-wrapper {
    -webkit-transform: skewY(5deg);
    -moz-transform: skewY(5deg);
    -ms-transform: skewY(5deg);
    -o-transform: skewY(5deg);
    transform: skewY(5deg);
}

.projects {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 2%;
}

.project-card--left {
    align-self: flex-start;
    margin-left: 20%;
    margin-bottom: 10%;
    position: relative;
}

.project-card--right {
    align-self: flex-end;
    margin-right: 20%;
    margin-bottom: 10%;
    position: relative;
}

.project-card--left:before {
    content: "";
    position: absolute;
    left: 0; right: 0;
    top: 0; bottom: 0;
    background: linear-gradient(to right, rgba(255,255,255,0.65) 0%,rgba(255,255,255,0.65) 100%);
    border-radius: 8px;
}

.project-card--right:before {
    content: "";
    position: absolute;
    left: 0; right: 0;
    top: 0; bottom: 0;
    background: linear-gradient(to right, rgba(255,255,255,0.65) 0%,rgba(255,255,255,0.65) 100%);
    border-radius: 8px;
}

.project__title--left, .project__title--right {
    font-size: 3rem;
    position: relative;
    top: 40%;
    left: -14%;
    max-width: 72%;
    width: max-content;
    color: rgb(38, 16, 235);
    padding: 7px 10px;
    font-weight: bold;
    text-shadow: -1px 1px 4px #0702354a;
    letter-spacing: 12px;
    overflow: hidden;
}

.project__title-span {
    display: inline-block;
    text-transform: uppercase;
    transform: translateY(100%);
    -webkit-transition: all 600ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
    transition:         all 600ms cubic-bezier(0.455, 0.03, 0.515, 0.955); 
}

.project__title--right {
    right: -61%;
    left: auto;
}

.simma {
    background-image: url(../assets/portfolio/simma1.png);
    background-size: cover;
    background-position-y: -126px;
}

.perso-site {
    background-image: url(../assets/portfolio/perso-site.jpg);
    background-size: cover;
    background-position-x: -108px;
}

.event-browser {
    background-image: url(../assets/portfolio/eventbrowser.JPG);
    background-size: cover;
    background-position-x: -108px;
}

@media screen and (max-width: 746px) {
    .project-card--right, .project-card--left {
        margin: 10% auto;
        align-self: auto;
        
    }

    .project__title--left, .project__title--right {
        left: auto;
        right: auto;
        top: -10%;
        max-width: 100%;
        font-size: calc(1.2rem + 30 * ((100vw - 18.75rem) / 446));
    }

}
/* ... */

